fix: #5 の修正の際にカードのz-indexが反映されなくなっている問題
CSSのposition:absoluteを使用すればComponentタグ表記でもFirefoxで3D表示される

--- a/src/app/component/game-table/game-table.component.css
+++ b/src/app/component/game-table/game-table.component.css
@@ -121,6 +121,7 @@
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   backface-visibility: hidden;
+  position: absolute;
 }
 
 .pointer-events-none {
